<resources>
    <string name="app_name">SupportMe</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="relationship_status">Relationship status</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="confrim_passwrod">Confrim Passwrod</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset_text">We will mail you a link after when you provide email and click the send button. Please click on that link to reset your password.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_image">Story Image</string>
    <string name="full_name">Full name</string>
    <string name="district">District</string>
    <string name="nickname">nickname</string>
    <string name="save">Save</string>
    <string name="screen_name">name to be displayed on screen</string>
    <string name="setup_fullname">Enter Your FullName</string>
    <string name="residence_district">District of Residence</string>
    <string name="add_comment">Add Comment</string>
    <string name="user_comments">User Comments:</string>
    <string name="write_a_comment_here">write a comment here</string>
    <string name="comment_text_will_display_here">Comment text will display here</string>
    <string name="at_the_rate">\@</string>
    <string name="leave_your_comment_here">Leave your comment here</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="edit_story">Edit Story</string>
    <string name="delete_story">Delete Story</string>

    <string name="About_us">Developer:</string>
    <string name="developers">Karma Tenzin 17508502\nChimi Tshering 17350748\nDawa Gyeltshen 17480595\nPema Wangchuk 17253255\nGovinda Ghimeray 77960168 \nBerandra Rai 17325645</string>
    <string name="guided_by">Guided by:</string>
    <string name="guide_name">Mr.Yeshi Wangchuk (Module Coordinator)</string>
    <string name="about_app">About app:</string>
    <string name="app_ifo">This ia a mobile app (SupportMe) intended to create a platform
    to write the stories and to provide information  which will guide and give an
    ides to youth and other user.
</string>
    <string name="add_post">Add Post</string>
    <string name="summary_of_your_story">Summary of your story</string>
    <string name="title_of_what_you_want_to_post">Title of what you want to post</string>

</resources>