<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AboutUsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/supportme"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_us"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />
    <TextView
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guided_by"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />
    <TextView
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_name"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_ifo"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />


</LinearLayout>