<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:hint="@string/title_of_what_you_want_to_post"
        android:inputType="textCapWords"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/select_post_image"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_below="@id/post_title"
        android:scaleType="fitCenter"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/image" />

    <EditText
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/select_post_image"
        android:hint="@string/summary_of_your_story"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:textSize="18sp" />

    <!--android:background="@color/cardview_shadow_end_color"-->

    <Button
        android:id="@+id/update_post_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_description"
        android:background="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:text="@string/add_post"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:textSize="18sp" />

</RelativeLayout>