<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="5dp"
        android:text="@string/password_reset_text"
        android:textAlignment="center"
        android:textColor="@color/greyBackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:onClick="resetUserPassword"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorPrimary"
        android:text="@string/reset_password"
        android:textColor="@color/textBackground"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>