<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReadStoryActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/postImage"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/story_image" />
        <TextView
            android:id="@+id/title"
            android:layout_below="@+id/postImage"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            style="@style/PostsTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userid"
            android:layout_below="@+id/title"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/PostsDetailTitle"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/post_description"
            android:layout_below="@+id/userid"
            android:layout_marginBottom="30dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PostsDetailText"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/comment_title"
            android:layout_below="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/user_comments"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_list"
            android:layout_below="@+id/comment_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_below="@+id/comments_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/leave_your_comment_here"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/comment_input"
            android:layout_below="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/write_a_comment_here"
            android:inputType="textMultiLine"
            android:autofillHints="@string/write_a_comment_here" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_comment"
            android:layout_below="@+id/comment_input"
            android:onClick="postComment"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add_comment" />

    </RelativeLayout>
</ScrollView>